--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div class="slide slide3">
     <div class="slide-wrapper slide3-wrapper">
 <div class="slide3__text">
-	<div class="slide3__text__h3">Waxom is Realization of your Ideas.</div>
+	<div class="slide3__text__h3">123Waxom is Realization of your Ideas.</div>
 	<p class="slide2__block__text__p">Investigationes demonstraverunt lectores legere me lius quod ii Investigationes demonstraverunt lectores legere me lius quod iiInvestigationes demonstraverunt lectores legere me lius quod ii</p>
 </div>
 	<div class="slide3__img">
