third-four-commit

--- a/index.html
+++ b/index.html
@@ -94,13 +94,22 @@
     <div class="slide-wrapper slide3-wrapper">
 <div class="slide3__text">
 	<div class="slide3__text__h3">Waxom is Realization of your Ideas.</div>
-	<p class="slide2__block__text__p">Investigationes demonstraverunt lectores legere me lius quod ii Investigationes demonstraverunt lectores legere me lius quod iiInvestigationes demonstraverunt lectores legere me lius quod ii</p>
+	<p class="slide3__text__p">Investigationes demonstraverunt lectores legere me lius quod ii lectores legere me lius quod iiInvestigationes demonstraverunt lectores legere me lius quod ii</p>
 </div>
 	<div class="slide3__img">
 		<div class="slide3__img_1"></div>
-		<div class="slide3__img_2"></div>
 		<div class="slide3__img_3"></div>
+		<div class="slide3__img_2"></div>
 	</div>
+</div>
+</div>
+<div class="slide slide4">
+    <div class="slide-wrapper slide4-wrapper">
+        <div class="slide4__text">
+            <h3 class="slide4__text__h3"> <span class="slide4__text__h3_span"> Waxom </span> Multipurpose WordPress Theme</h3>
+            <p class="slide4__text__p">Don't forget to Rate the Template. Thanks so much!</p>
+        </div>
+        <input class="slide4__button" type="button" value="Purchase now"/>
 </div>
 </div>
 <footer>
