--- a/index.html
+++ b/index.html
@@ -112,6 +112,60 @@
         <input class="slide4__button" type="button" value="Purchase now"/>
 </div>
 </div>
+<div class="slide slide5">
+    <div class="slide-wrapper slide5-wrapper">
+        <div class="slide5__text">
+            <div class="slide5__text__h3">Our latest projects</div>
+            <div class="slide5__text__p">Investigationes demonstraverunt lectores legere me lius quod ii investigationes demonstraverunt lectores legere me lius demonstraverunt lectores legere me lius quod ii</div>
+        </div>
+        <nav class="slide5__nav">
+            <input class="slide5__nav__button" type="button" value="All"/>
+            <input class="slide5__nav__button" type="button" value="Web Design"/>
+            <input class="slide5__nav__button" type="button" value="Mobile App"/>
+            <input class="slide5__nav__button" type="button" value="Illustration"/>
+            <input class="slide5__nav__button" type="button" value="Photography"/>
+        </nav>
+        <div class="slide5__pic">
+            <div class="slide5__pic-wrapper slide5__pic_1__img">
+                <div class="slide5__pic__text">
+                    <div class="slide5__pic__text__h3">Claritas Etiam Processus</div>
+                    <div class="slide5__pic__text__p">Photography, Nature</div>
+                </div>
+            </div>
+            <div class="slide5__pic-wrapper slide5__pic_2__img">
+                <div class="slide5__pic__text">
+                    <div class="slide5__pic__text__h3">Quam Nutamus Farum</div>
+                    <div class="slide5__pic__text__p">Graphic Design, Mock-Up</div>
+                </div>
+            </div>
+            <div class="slide5__pic-wrapper slide5__pic_3__img">
+                <div class="slide5__pic__text">
+                    <div class="slide5__pic__text__h3">Usus Legentis Videntur</div>
+                    <div class="slide5__pic__text__p">Photography, Holiday</div>
+                </div>
+            </div>
+            <div class="slide5__pic-wrapper slide5__pic_4__img">
+                <div class="slide5__pic__text">
+                    <div class="slide5__pic__text__h3">Claritas Etiam Processus</div>
+                    <div class="slide5__pic__text__p">Photography, Nature</div>
+                </div>
+            </div>
+            <div class="slide5__pic-wrapper slide5__pic_5__img">
+                <div class="slide5__pic__text">
+                    <div class="slide5__pic__text__h3">Quam Nutamus Farum</div>
+                    <div class="slide5__pic__text__p">Graphic Design, Mock-Up</div>
+                </div>
+            </div>
+            <div class="slide5__pic-wrapper slide5__pic_6__img">
+                <div class="slide5__pic__text">
+                    <div class="slide5__pic__text__h3">Usus Legentis Videntur</div>
+                    <div class="slide5__pic__text__p">Photography, Holiday</div>
+                </div>
+            </div>
+        </div>
+        <input class="slide5__button" type="button" value="Load more"/>
+    </div>
+</div>
 <footer>
 
 </footer>
