size-wrap-commit

--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
         <input class="slide5__button" type="button" value="Load more"/>
     </div>
 </div>
+<div class="slide slide6">
+        <iframe class="slide6__video" src="https://www.youtube.com/embed/9lO06Zxhu88" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 <footer>
 
 </footer>
