slide78-without-adapt-v3-blyat

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 </div>
 <div class="slide slide7">
     <div class="slide-wrapper slide7-wrapper">
-    <img class="slide7__img" src="img/slide7.png">
+        <div class="slide7__img" src="img/slide7.png"></div>
         <div class="slide7__text">
             <h3 class="slide7__text__h3">Excellent for Mobile Devices.</h3>
             <p class="slide7__text__p">Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorp. Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorp. Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorp. Hdemonstraverunt lectores legere me lius demonstraverunt lectores legere me lius quod ii.</p>
