slide9-need-fix

--- a/index.html
+++ b/index.html
@@ -234,8 +234,50 @@
                 <p class="slide8__block__text__p">we launched</p>
             </div>
         </div>
-
 </div>
+</div>
+<div class="slide slide9">
+    <div class="slide-wrapper slide9-wrapper">
+        <div class="slide9__text">
+            <h3 class="slide9__text__h3">Recent Posts.</h3>
+            <p class="slide9__text__p">Investigationes demonstraverunt lectores legere me lius quod ii. Investigationes demonstraverunt lectores legere me lius quod ii. Investigationes demonstraverunt lectores legere me lius quod ii.</p>
+        </div>
+        <div class="slide9__pic">
+                <div class="slide9__pic-wrapper slide9__pic_1__img">
+                    <div class="slide9__pic___small-img">
+                        <p class="slide9__pic-date">30</p>
+                        <p class="slide9__pic-month">Sep.</p>
+                    </div>
+                    <div class="slide9__pic__text">
+                        <h3 class="slide9__pic__text__h3">Lorem ipsum dolor sit amet</h3>
+                        <p class="slide9__pic__text__p">Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
+                        <p class="slide9__pic__text_small">Read More</p>
+                    </div>
+                </div>
+            <div class="slide9__pic-wrapper slide9__pic_2__img">
+                <div class="slide9__pic___small-img">
+                    <p class="slide9__pic-date">30</p>
+                    <p class="slide9__pic-month">Sep.</p>
+                </div>
+                <div class="slide9__pic__text">
+                    <h3 class="slide9__pic__text__h3">Lorem ipsum dolor sit amet</h3>
+                    <p class="slide9__pic__text__p">Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
+                    <p class="slide9__pic__text_small">Read More</p>
+                </div>
+            </div>
+            <div class="slide9__pic-wrapper slide9__pic_3__img">
+                <div class="slide9__pic___small-img">
+                    <p class="slide9__pic-date">30</p>
+                    <p class="slide9__pic-month">Sep.</p>
+                </div>
+                <div class="slide9__pic__text">
+                    <h3 class="slide9__pic__text__h3">Lorem ipsum dolor sit amet</h3>
+                    <p class="slide9__pic__text__p">Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
+                    <p class="slide9__pic__text_small">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <footer>
 
