--- a/index.html
+++ b/index.html
@@ -243,40 +243,51 @@
             <p class="slide9__text__p">Investigationes demonstraverunt lectores legere me lius quod ii. Investigationes demonstraverunt lectores legere me lius quod ii. Investigationes demonstraverunt lectores legere me lius quod ii.</p>
         </div>
         <div class="slide9__pic">
-                <div class="slide9__pic-wrapper slide9__pic_1__img">
-                    <div class="slide9__pic___small-img">
-                        <p class="slide9__pic-date">30</p>
-                        <p class="slide9__pic-month">Sep.</p>
+                <div class="slide9__pic-wrapper">
+                    <div class="slide9__pic_1__img">
+                        <div class="slide9__pic___small-img">
+                            <p class="slide9__pic-date">30</p>
+                            <p class="slide9__pic-month">Sep.</p>
+                        </div>
                     </div>
                     <div class="slide9__pic__text">
                         <h3 class="slide9__pic__text__h3">Lorem ipsum dolor sit amet</h3>
                         <p class="slide9__pic__text__p">Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
-                        <p class="slide9__pic__text_small">Read More</p>
+                        <p class="slide9__pic__text_small">Read More&nbsp;&nbsp;&#9658;</p>
                     </div>
                 </div>
-            <div class="slide9__pic-wrapper slide9__pic_2__img">
-                <div class="slide9__pic___small-img">
-                    <p class="slide9__pic-date">30</p>
-                    <p class="slide9__pic-month">Sep.</p>
+            <div class="slide9__pic-wrapper">
+                <div class="slide9__pic_2__img">
+                    <div class="slide9__pic___small-img">
+                        <p class="slide9__pic-date">30</p>
+                        <p class="slide9__pic-month">Sep.</p>
+                    </div>
                 </div>
                 <div class="slide9__pic__text">
                     <h3 class="slide9__pic__text__h3">Lorem ipsum dolor sit amet</h3>
                     <p class="slide9__pic__text__p">Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
-                    <p class="slide9__pic__text_small">Read More</p>
+                    <p class="slide9__pic__text_small">Read More&nbsp;&nbsp;&#9658;</p>
                 </div>
             </div>
-            <div class="slide9__pic-wrapper slide9__pic_3__img">
-                <div class="slide9__pic___small-img">
-                    <p class="slide9__pic-date">30</p>
-                    <p class="slide9__pic-month">Sep.</p>
+            <div class="slide9__pic-wrapper">
+                <div class="slide9__pic_3__img">
+                    <div class="slide9__pic___small-img">
+                        <p class="slide9__pic-date">30</p>
+                        <p class="slide9__pic-month">Sep.</p>
+                    </div>
                 </div>
                 <div class="slide9__pic__text">
                     <h3 class="slide9__pic__text__h3">Lorem ipsum dolor sit amet</h3>
                     <p class="slide9__pic__text__p">Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
-                    <p class="slide9__pic__text_small">Read More</p>
+                    <p class="slide9__pic__text_small">Read More&nbsp;&nbsp;&#9658;</p>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+<div class="slide slide10">
+    <div class="slide-wrapper slide10-wrapper">
+        SLIDE 10
     </div>
 </div>
 <footer>
