slide11-without-adapt

--- a/index.html
+++ b/index.html
@@ -298,6 +298,45 @@
             <p class="slide11__logo-column__p">Nam liber tempor cum soluta nobis eleifend option congue nihi. Nam liber tempor cum soluta nobis eleifend option congue nihi. Nam liber tempor cum soluta nobis eleifend option congue nihi. Nam liber tempor cum soluta nobis eleifend option congue nihi.</p>
             <span class="slide11__logo-column__span">Read More&nbsp;&nbsp;&#9658;</span>
         </section>
+        <section class="slide11__column">
+            <h3 class="slide11__column__h3">Recent Posts</h3>
+            <div class="slide11__column__block">
+                <span class="slide11__column__span">September 08, 2015</span>
+                <p class="slide11__column__p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+            </div>
+            <div class="slide11__column__block_2">
+                <span class="slide11__column__span">September 08, 2015</span>
+                <p class="slide11__column__p">Diam nonummy nibh euismod tincidunt ut laoreet dolore magna</p>
+            </div>
+            <div class="slide11__column__block">
+                <span class="slide11__column__span">September 08, 2015</span>
+                <p class="slide11__column__p">Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
+            </div>
+        </section>
+        <section class="slide11__column">
+            <h3 class="slide11__column__h3">Our Twitter</h3>
+            <div class="slide11__column_2__block">
+                <p class="slide11__column_2__p"><a class="slide11__column__block__a" href="#">@waxom</a> Cum soluta nobis eleifend option congue nihil imperdiet </p>
+                <span class="slide11__column__span">3 mins ago</span>
+            </div>
+            <div class="slide11__column_2__block_2">
+                <p class="slide11__column_2__p">Mirum est <a class="slide11__column__block__a" href="#">#envato</a> notare quam littera gothica, quam nunc putamu</p>
+            <span class="slide11__column__span">5 hours ago</span>
+            </div>
+        <div class="slide11__column_2__block">
+            <div class="slide11__column_2__p">Soluta nobis option <a href="#" class="slide11__column__block__a_2">bit.ly/1Hniso7</a></div>
+            <span class="slide11__column__span">20 days ago</span>
+        </div>
+        </section>
+        <section class="slide11__column">
+            <h3 class="slide11__column__h3">Dribbble Widget</h3>
+             <div class="slide11__column__pic">
+                 <img class="slide11__column__img" src="img/slide11-1.jpg">
+                 <img class="slide11__column__img" src="img/slide11-2.jpg">
+                 <img class="slide11__column__img" src="img/slide11-3.jpg">
+                 <img class="slide11__column__img" src="img/slide11-4.jpg">
+             </div>
+        </section>
     </div>
 </div>
 <footer>
