--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <div class="slide9__pic__text">
                         <h3 class="slide9__pic__text__h3">Lorem ipsum dolor sit amet</h3>
                         <p class="slide9__pic__text__p">Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
-                        <span class="slide9__pic__text__span">Read More&nbsp;&nbsp;&#9658;</span>
+                        <a href="#" class="slide9__pic__text__a">Read More&nbsp;&nbsp;&#9658;</a>
                     </div>
                 </div>
             <div class="slide9__pic-wrapper">
@@ -261,7 +261,7 @@
                 <div class="slide9__pic__text">
                     <h3 class="slide9__pic__text__h3">Lorem ipsum dolor sit amet</h3>
                     <p class="slide9__pic__text__p">Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
-                    <span class="slide9__pic__text__span">Read More&nbsp;&nbsp;&#9658;</span>
+                    <a href="#" class="slide9__pic__text__a">Read More&nbsp;&nbsp;&#9658;</a>
                 </div>
             </div>
             <div class="slide9__pic-wrapper">
@@ -274,7 +274,7 @@
                 <div class="slide9__pic__text">
                     <h3 class="slide9__pic__text__h3">Lorem ipsum dolor sit amet</h3>
                     <p class="slide9__pic__text__p">Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
-                    <span class="slide9__pic__text__span">Read More&nbsp;&nbsp;&#9658;</span>
+                    <a href="#" class="slide9__pic__text__a">Read More&nbsp;&nbsp;&#9658;</a>
                 </div>
             </div>
         </div>
@@ -296,7 +296,7 @@
             <img class="slide11__logo-column__img" src="img/logo.png">
             <h2 class="slide11__logo-column__h2">Waxom</h2>
             <p class="slide11__logo-column__p">Nam liber tempor cum soluta nobis eleifend option congue nihi. Nam liber tempor cum soluta nobis eleifend option congue nihi. Nam liber tempor cum soluta nobis eleifend option congue nihi. Nam liber tempor cum soluta nobis eleifend option congue nihi.</p>
-            <span class="slide11__logo-column__span">Read More&nbsp;&nbsp;&#9658;</span>
+            <a href="#" class="slide11__logo-column__a">Read More&nbsp;&nbsp;&#9658;</a>
         </section>
         <section class="slide11__column">
             <h3 class="slide11__column__h3">Recent Posts</h3>
@@ -324,7 +324,7 @@
             <span class="slide11__column__span">5 hours ago</span>
             </div>
         <div class="slide11__column_2__block">
-            <div class="slide11__column_2__p">Soluta nobis option <a href="#" class="slide11__column__block__a_2">bit.ly/1Hniso7</a></div>
+            <p class="slide11__column_2__p">Soluta nobis option <a href="#" class="slide11__column__block__a_2">bit.ly/1Hniso7</a></p>
             <span class="slide11__column__span">20 days ago</span>
         </div>
         </section>
