--- a/index.html
+++ b/index.html
@@ -127,36 +127,42 @@
         </nav>
         <div class="slide5__pic">
             <div class="slide5__pic-wrapper slide5__pic_1__img">
+                <div class="slide5__pic__triangle"></div>
                 <div class="slide5__pic__text">
                     <h3 class="slide5__pic__text__h3">Claritas Etiam Processus</h3>
                     <p class="slide5__pic__text__p">Photography, Nature</p>
                 </div>
             </div>
             <div class="slide5__pic-wrapper slide5__pic_2__img">
+                <div class="slide5__pic__triangle"></div>
                 <div class="slide5__pic__text">
                     <h3 class="slide5__pic__text__h3">Quam Nutamus Farum</h3>
                     <p class="slide5__pic__text__p">Graphic Design, Mock-Up</p>
                 </div>
             </div>
             <div class="slide5__pic-wrapper slide5__pic_3__img">
+                <div class="slide5__pic__triangle"></div>
                 <div class="slide5__pic__text">
                     <h3 class="slide5__pic__text__h3">Usus Legentis Videntur</h3>
                     <p class="slide5__pic__text__p">Photography, Holiday</p>
                 </div>
             </div>
             <div class="slide5__pic-wrapper slide5__pic_4__img">
+                <div class="slide5__pic__triangle"></div>
                 <div class="slide5__pic__text">
                     <h3 class="slide5__pic__text__h3">Claritas Etiam Processus</h3>
                     <p class="slide5__pic__text__p">Photography, Nature</p>
                 </div>
             </div>
             <div class="slide5__pic-wrapper slide5__pic_5__img">
+                <div class="slide5__pic__triangle"></div>
                 <div class="slide5__pic__text">
                     <h3 class="slide5__pic__text__h3">Quam Nutamus Farum</h3>
                     <p class="slide5__pic__text__p">Graphic Design, Mock-Up</>
                 </div>
             </div>
             <div class="slide5__pic-wrapper slide5__pic_6__img">
+                <div class="slide5__pic__triangle"></div>
                 <div class="slide5__pic__text">
                     <h3 class="slide5__pic__text__h3">Usus Legentis Videntur</h3>
                     <p class="slide5__pic__text__p">Photography, Holiday</p>
