--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </h1>
             <p class="slide1__names__p"> Nam liber tempor cum soluta nobis eleifend option congue nihil imper-<br>diet doming id quod mazim placerat facer possim assum.</p>
         </div>
-        <input class="slide1__button" type="button" value="Get started"/>
+        <input class="slide1__button slide__button" type="button" value="Get started"/>
     </div>
 </div>
 </div>
@@ -95,7 +95,7 @@
             <h3 class="slide4__text__h3"> <span class="slide4__text__h3_span"> Waxom </span> Multipurpose WordPress Theme</h3>
             <p class="slide4__text__p">Don't forget to Rate the Template. Thanks so much!</p>
         </div>
-        <input class="slide4__button" type="button" value="Purchase now"/>
+        <input class="slide4__button slide__button" type="button" value="Purchase now"/>
 </div>
 </div>
 <div class="slide slide5">
@@ -155,7 +155,7 @@
                 </div>
             </div>
         </div>
-        <input class="slide5__button" type="button" value="Load more"/>
+        <input class="slide5__button slide__button" type="button" value="Load more"/>
     </div>
 </div>
 <div class="slide slide6">
